# b1CodingTool

./: .env.example  .gitignore  CLAUDE.md  CODEX.md  GEMINI.md  README.md  agent.md  agents.md  pyproject.toml
.agent/: config.yaml
.agent/modules/: django  fastapi  flutter  react-native  swift  xcode
.agent/project/: agent.md
.agents/project/: agents.md
conductor/: 2026-05-11-rust-module.md  2026-05-17-docker-module-design.md  2026-05-18-backend-indexes-plan.md
dashboard/: package-lock.json
dashboard/src/: App.tsx  index.css
docs/: MODULE_GUIDE.md  PLAN_MCP.md  SPEC.md  SPEC_MCP.md  global-cli-distribution.md  phase_1_plan.md  phase_2_plan.md  phase_3_plan.md  phase_4_plan.md  phase_5_plan.md
init/: .gitignore  README.md
modules/aws/: b1-module.yaml
modules/react-native/: b1-module.yaml
modules/swift/: b1-module.yaml
modules/xcode/: b1-module.yaml
skills/: call-claude-within-codex.skill  call-claude-within-gemini.skill  call-codex-within-claude.skill  call-codex-within-gemini.skill  call-gemini-within-claude.skill  call-gemini-within-codex.skill
skills/call-claude-within-codex/: SKILL.md
skills/call-claude-within-gemini/: SKILL.md
skills/call-codex-within-claude/: SKILL.md
skills/call-codex-within-gemini/: SKILL.md
skills/call-gemini-within-claude/: SKILL.md
skills/call-gemini-within-codex/: SKILL.md
src/b1/: __main__.py  cli.py
tests/: conftest.py
tests/integration/: test_init_cmd.py  test_install_cmd.py  test_link_clickup_cmd.py  test_link_github_cmd.py  test_mcp_server.py  test_pair_cmd.py  test_pull_cmd.py  test_push_cmd.py  test_server.py
tests/slow/: test_fetcher_real_git.py  test_push_real_git.py
tests/unit/: test_compiler.py  test_config.py  test_context_manager.py  test_docker_context.py  test_error_handling.py  test_fetcher.py  test_github_modules.py  test_hook_engine.py  test_hook_execution.py  test_installer.py  test_link_clickup.py  test_link_github.py  (+7 more)
(+224 files in other folders)
