[project]
name = "b1"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.27",
    "mcp>=1.27.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "typer>=0.24.1",
    "uvicorn>=0.43.0",
]

[project.scripts]
b1 = "b1.cli:main"
b1-mcp = "b1.server.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "slow: tests that make real git/network calls (run with: pytest -m slow)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
